--- a/PopApp/Base.lproj/Main.storyboard
+++ b/PopApp/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,108 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PopApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KWn-vt-Kq0" userLabel="firstNum">
+                                <rect key="frame" x="16" y="74" width="34" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="msV-WH-6KD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="im6-iz-DaM" userLabel="operator">
+                                <rect key="frame" x="180" y="73" width="15" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="15" id="Bt1-Av-f2g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCK-no-i2X">
+                                <rect key="frame" x="69" y="242" width="62" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FNK-pm-OW9" userLabel="input">
+                                <rect key="frame" x="139" y="239" width="172" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSs-kB-tmz">
+                                <rect key="frame" x="103" y="323" width="60" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="tik-Gm-jfg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aB5-le-bgB" userLabel="score">
+                                <rect key="frame" x="244" y="323" width="115" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qo9-av-hoL">
+                                <rect key="frame" x="163" y="277" width="49" height="30"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="click:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kNo-kp-dkU"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ty2-5B-oVy" userLabel="secondNum">
+                                <rect key="frame" x="327" y="74" width="32" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="dE7-Oo-WqY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LCK-no-i2X" firstAttribute="baseline" secondItem="FNK-pm-OW9" secondAttribute="baseline" id="0Ig-NI-ptD"/>
+                            <constraint firstItem="ty2-5B-oVy" firstAttribute="trailing" secondItem="aB5-le-bgB" secondAttribute="trailing" id="4lr-qi-IBX"/>
+                            <constraint firstItem="LCK-no-i2X" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="69" id="8qE-OB-zYS"/>
+                            <constraint firstItem="GSs-kB-tmz" firstAttribute="baseline" secondItem="aB5-le-bgB" secondAttribute="baseline" id="9nJ-cG-5O3"/>
+                            <constraint firstItem="GSs-kB-tmz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Bef-rZ-zvY"/>
+                            <constraint firstItem="KWn-vt-Kq0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="54" id="C5n-F9-65R"/>
+                            <constraint firstItem="qo9-av-hoL" firstAttribute="top" secondItem="FNK-pm-OW9" secondAttribute="bottom" constant="8" symbolic="YES" id="FoN-le-pNN"/>
+                            <constraint firstItem="ty2-5B-oVy" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="N6S-Zg-Bas"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FNK-pm-OW9" secondAttribute="trailing" constant="64" id="Xvn-VH-V1I"/>
+                            <constraint firstItem="FNK-pm-OW9" firstAttribute="leading" secondItem="LCK-no-i2X" secondAttribute="trailing" constant="8" symbolic="YES" id="Yb1-lG-xGz"/>
+                            <constraint firstItem="aB5-le-bgB" firstAttribute="leading" secondItem="GSs-kB-tmz" secondAttribute="trailing" constant="81" id="b62-Mk-PtI"/>
+                            <constraint firstItem="KWn-vt-Kq0" firstAttribute="baseline" secondItem="ty2-5B-oVy" secondAttribute="baseline" id="iqW-rR-Vf4"/>
+                            <constraint firstItem="im6-iz-DaM" firstAttribute="centerX" secondItem="qo9-av-hoL" secondAttribute="centerX" id="okh-In-E1m"/>
+                            <constraint firstItem="im6-iz-DaM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rPt-UC-zBw"/>
+                            <constraint firstItem="im6-iz-DaM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="tVx-ZK-aj9"/>
+                            <constraint firstItem="LCK-no-i2X" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="222" id="uIb-GQ-Bvj"/>
+                            <constraint firstItem="KWn-vt-Kq0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="v0c-0x-VCz"/>
+                            <constraint firstItem="GSs-kB-tmz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="103" id="zkM-xE-a79"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="firstNum" destination="KWn-vt-Kq0" id="vVv-JQ-tlB"/>
+                        <outlet property="input" destination="FNK-pm-OW9" id="itn-Z2-9fd"/>
+                        <outlet property="op" destination="im6-iz-DaM" id="SPi-Pa-h4G"/>
+                        <outlet property="score" destination="aB5-le-bgB" id="qcu-RW-6iS"/>
+                        <outlet property="secondNum" destination="ty2-5B-oVy" id="RGo-F2-TDj"/>
+                        <outlet property="submit" destination="qo9-av-hoL" id="vUD-Uf-VHv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
